Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-186

LP:959701 - Client programs throw warnings about memory loss when executed with --help or alike

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Minor
    • Resolution: Fixed
    • None
    • 5.5.22
    • None
    • None

    Description

      https://bugs.launchpad.net/maria/+bug/959701

      When a client problem is executed with --version, or --help, or without parameters, it throws warnings about lost bytes, e.g.

      Warning: 484 bytes lost, allocated at mysys/my_alloc.c:217, mysys/default.c:1203, mysys/default.c:524, mysys/default.c:468, client/mysqladmin.cc:310, ??:0
      Warning: 1024 bytes lost, allocated at mysys/array.c:65, mysys/hash.c:92, mysys/thr_mutex.c:186, mysys/thr_mutex.c:323, sql-common/client_plugin.c:262, libmysql/libmysql.c:134, sql-common/client.c:1708, client/mysqladmin.cc:310
      Warning: 1024 bytes lost, allocated at mysys/array.c:65, mysys/hash.c:92, mysys/thr_mutex.c:181, mysys/thr_mutex.c:323, sql-common/client_plugin.c:262, libmysql/libmysql.c:134, sql-common/client.c:1708, client/mysqladmin.cc:310

      etc.

      From the standard set of binaries produced with DCMAKE_BUILD_TYPE=Debug without any other parameters, observed on

      • mysqladmin
      • mysqlcheck
      • mysqldump (it's message also looks strange: (Warning: 15 bytes lost, allocated at addr2line: 'mysqldump': No such file")
      • mysqlimport
      • mysql_plugin
      • mysqlshow
      • mysqlslap
      • mysql_upgrade

      maria/5.5
      igor@askmonty.org-20120317191657-0jjkhk88bcs469r6
      date: 2012-03-17 12:16:57 -0700
      build-date: 2012-03-20 00:49:08 +0400
      revno: 3334

      Also reproducible on maria/5.5-serg

      revision-id: sergii@pisem.net-20120316090423-d94wuya0ol08cql6
      date: 2012-03-16 10:04:23 +0100
      build-date: 2012-03-20 00:49:47 +0400
      revno: 3329

      Not reproducible on maria/5.3, mysql-server/5.5, mysql-server/trunk.

      To reproduce,

      • build the client program using cmake .. -DCMAKE_BUILD_TYPE=Debug && make;
      • start the client program, e.g. client/mysqladmin --help
      • see output.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5h
                0.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.