client/mysqlshow.c
@@ -67,11 +67,13 @@ int main(int argc, char **argv)
   char *wild;
   MYSQL mysql;
   MY_INIT(argv[0]);
+  sf_leaking_memory=1; /* don't report memory leaks on early exits */
   if (load_defaults("my",load_default_groups,&argc,&argv))
     exit(1);
 
   get_options(&argc,&argv);
 
+  sf_leaking_memory=0; /* from now on we cleanup properly */
   wild=0;
   if (argc)
   {
